--- a/final.html
+++ b/final.html
@@ -22,8 +22,8 @@
          /* text-align: center; */
         border-radius: 5px;
         margin: 150px;
-        margin-left: 300px;
-        box-shadow: 5px 10px 8px 10px mediumturquoise;
+        margin-left: 400px;
+        box-shadow: 5px 10px 5px 2px mediumturquoise;
       }
       .name,.grd,.time{
           text-align: center;
@@ -71,7 +71,7 @@ var user_time = sessionStorage.getItem("time");
 console.log(user_grade,user_time);
 
 document.querySelector("div.name").innerHTML=" THANKS "+"<span>"+fName+" "+lname+"</span>";
-document.querySelector("div.grd").innerHTML="You Grade Is "+"<span>"+user_grade+"</span";
+document.querySelector("div.grd").innerHTML="You Grade Is "+"<span>"+user_grade+" /10"+"</span>";
 document.querySelector("div.time").innerHTML="Your Finish Time is "+"<span>"+user_time+"</span";
   
 
